--- a/RespiratoryCareInfoMap/Base.lproj/Main.storyboard
+++ b/RespiratoryCareInfoMap/Base.lproj/Main.storyboard
@@ -25,6 +25,36 @@
             </objects>
             <point key="canvasLocation" x="1031.8840579710145" y="123.88392857142857"/>
         </scene>
+        <!--View Controller-->
+        <scene sceneID="TNC-Lq-fm2">
+            <objects>
+                <viewController id="Afy-Lk-oXI" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="0HZ-fB-nuu">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="Gg0-fm-xAS"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="yWi-3c-5DZ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1822" y="-20"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="xLC-cX-EQq">
+            <objects>
+                <viewController id="KB2-Vw-QRz" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="8MG-L1-Vh2">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="r4o-gM-IQn"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Oii-7I-BjZ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1823" y="635"/>
+        </scene>
         <!--Navigation Controller-->
         <scene sceneID="qxy-zz-kAP">
             <objects>
